# spreadsheet_to_json

./: .env.example  Cargo.toml  README.md  env.example.txt
data/: .~lock.sample-data-1.csv#  .~lock.sample-data-2.ods#  medium-spreadsheet-50_000.xlsx  sample-data-1.csv  sample-data-1.xlsx  sample-data-2.ods
src/: args.rs  data_set.rs  db.rs  detect.rs  error.rs  euro_number_format.rs  fuzzy_datetime.rs  headers.rs  helpers.rs  is_truthy.rs  lib.rs  main.rs  options.rs  reader.rs  round_decimal.rs
src/tests/: database_test.rs
