[package]
name = "spreadsheet-to-json"
description = "Asynchronous conversion of Excel and OpenDocument spreadsheets as well as CSV and TSV files to JSON or JSONL"
repository = "https://github.com/neilg63/spreadsheet_to_json"
version = "0.1.12"
edition = "2021"
categories = ["data-structures", "parsing", "text-processing"]
license = "GPL-2.0-or-later WITH Bison-exception-2.2"

[dependencies]
calamine = { version = "0.26.1", features = ["chrono", "dates"] }
chrono = "^0.4.39"
csv = "1.3.1"
heck = "0.5.0"
indexmap = { version = "^2.7.0", features = ["serde"] }
serde = { version = "^1.0.216", features = ["derive", "serde_derive"] }
serde_json = { version = "^1.0.134", features = ["preserve_order"] }
simple-string-patterns = "^0.3.16"
tokio = { version = ">=1.42.0, <2.0.0", features = ["full"] }

