[package]
name = "spreadsheet-to-json"
description = "Asynchronous conversion of Excel and OpenDocument spreadsheets as well as CSV and TSV files to JSON or JSONL"
repository = "https://github.com/neilg63/spreadsheet_to_json"
version = "0.1.14"
edition = "2021"
categories = ["data-structures", "parsing", "text-processing"]
license = "GPL-2.0-or-later WITH Bison-exception-2.2"

[dependencies]
calamine = { version = "0.35.0", features = ["chrono", "dates"] }
chrono = "^0.4.39"
csv = "1.4.0"
fuzzy-datetime = "0.1.1"
heck = "0.5.0"
indexmap = { version = "^2.14.0", features = ["serde"] }
serde = { version = "^1.0.228", features = ["derive", "serde_derive"] }
serde_json = { version = "^1.0.149", features = ["preserve_order"] }
simple-string-patterns = "^0.3.16"
tokio = { version = ">=1.42.0, <2.0.0", features = ["full"] }
